
    - (Issue 112) Error Predefined Constants Not available for PHP 5.x versions

2008-06-14 - Release Version: 0.3.1

    - (Issue 108) ignore class name case in object filter

2009-05-11 - Release Version: 0.3
2009-05-01 - Release Version: 0.3.rc.1

    - (Issue 90) PHP4 compatible version of FirePHPCore
    - (Issue 98) Thrown exceptions don't send an HTTP 500 if the FirePHP exception handler is enabled
    - (Issue 85) Support associative arrays in encodeTable method in FirePHP.class.php
    - (Issue 66) Add a new getOptions() public method in API
    - (Issue 82) Define $this->options outside of __construct
    - (Issue 72) Message error if group name is null
    - (Issue 68) registerErrorHandler() and registerExceptionHandler() should returns previous handlers defined
    - (Issue 69) Add the missing register handler in the triumvirate (error, exception, assert)
    - (Issue 75) [Error & Exception Handling] Option to not exit script execution
    - (Issue 83) Exception handler can't throw exceptions
    - (Issue 80) Auto/Pre collapsing groups AND Custom group row colors

2008-11-09 - Release Version: 0.2.1

    - (Issue 70) Problem when logging resources

2008-10-21 - Release Version: 0.2.0

    - Updated version to 0.2.0
    - Switched to using __sleep instead of __wakeup
    - Added support to exclude object members when encoding
    - Add support to enable/disable logging

2008-10-17 - Release Version: 0.2.b.8
  
    - New implementation for is_utf8()
    - (Issue 55) maxObjectDepth Option not working correctly when using TABLE and EXCEPTION Type
    - Bugfix for max[Object|Array]Depth when encoding nested array/object graphs
    - Bugfix for FB::setOptions()

2008-10-16 - Release Version: 0.2.b.7

    - (Issue 45) Truncate dump when string have non utf8 cars
    - (Issue 52) logging will not work when firephp object gets stored in the session.

2008-10-16 - Release Version: 0.2.b.6

    - (Issue 37) Display file and line information for each log message