@@ -1,0 +1,77 @@
+<?php
+
+require_once dirname(dirname(__FILE__)) . DIRECTORY_SEPARATOR . 'TestHelper.php';
+ 
+
+class FirePHPCore_FirePHPTest extends PHPUnit_Framework_TestCase
+{
+
+
+
+    /**
+     * @issue http://code.google.com/p/firephp/issues/detail?id=117
+     */
+    public function testDumpArguments()
+    {
+        $firephp = new FirePHP_Test_Class();
+
+        $firephp->dump("key", "value");
+        $headers = $firephp->_getHeaders();
+        $this->assertEquals('15|{"key":"value"}|', $headers['X-Wf-1-2-1-1']);
+        $firephp->_clearHeaders();
+
+        $caught = false;
+        try {
+            $firephp->dump(array(), "value");
+        } catch(Exception $e) {
+            // Key passed to dump() is not a string
+            $caught = true;
+        }
+        if(!$caught) $this->fail('No exception thrown');
+
+        $caught = false;
+        try {
+            $firephp->dump("key \n\r value", "value");
+        } catch(Exception $e) {
+            // Key passed to dump() contains invalid characters [a-zA-Z0-9-_\.:]
+            $caught = true;
+        }
+        if(!$caught) $this->fail('No exception thrown');
+
+        $caught = false;
+        try {
+            $firephp->dump("keykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeykkeykeykeyk1", "value");
+        } catch(Exception $e) {
+            // Key passed to dump() is longer than 100 characters
+            $caught = true;
+        }
+        if(!$caught) $this->fail('No exception thrown');
+    }
+    
+
+    public function testDeprecatedMethods()
+    {
+        $firephp = new FirePHP_Test_Class();
+
+        $caught = false;
+        try {
+            $firephp->setProcessorUrl('URL');
+        } catch(Exception $e) {
+            $caught = true;
+            $this->assertEquals(E_USER_DEPRECATED, $e->getCode());
+            $this->assertEquals('The FirePHP::setProcessorUrl() method is no longer supported', $e->getMessage());
+        }
+        if(!$caught) $this->fail('No deprecation error thrown');
+
+        $caught = false;
+        try {
+            $firephp->setRendererUrl('URL');
+        } catch(Exception $e) {
+            $caught = true;
+            $this->assertEquals(E_USER_DEPRECATED, $e->getCode());
+            $this->assertEquals('The FirePHP::setRendererUrl() method is no longer supported', $e->getMessage());
+        }
+        if(!$caught) $this->fail('No deprecation error thrown');
+    }
+      
+}
